--- a/notebooks/jetracer.ipynb
+++ b/notebooks/jetracer.ipynb
@@ -7,8 +7,9 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torchvision\n",
-    "import torch2trt"
+    "import torch2trt\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2"
    ]
   },
   {
@@ -17,7 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = torchvision.models.segmentation.deeplabv3_resnet101(pretrained=True)"
+    "# Load the jetracer trained model \n",
+    "model = torch.load('/models/run02/weights.pt')"
    ]
   },
   {
@@ -58,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = torch.ones((1, 3, 224, 224)).cuda().half()"
+    "data = torch.ones((1,3,300,650)).cuda().half()"
    ]
   },
   {
@@ -83,13 +85,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from jetcam.csi_camera import CSICamera\n",
-    "from jetcam.usb_camera import USBCamera\n",
-    "\n",
-    "# camera = CSICamera(width=224, height=224)\n",
-    "camera = USBCamera(width=224, height=224)\n",
-    "\n",
-    "camera.running = True"
+    "ino = 289\n",
+    "# Read  a sample image and mask from the data-set\n",
+    "img = cv2.imread(f'/models/train_data/Images/{ino:03d}_cam-image1_.jpg').transpose(2,0,1).reshape(1,3,300,650)\n",
+    "mask = cv2.imread(f'/models/train_data/Masks/{ino:03d}_cam-image1_mask.png')\n",
+    "input = torch.from_numpy(img).type(torch.cuda.FloatTensor)/255"
    ]
   },
   {
@@ -98,15 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jetcam.utils import bgr8_to_jpeg\n",
-    "import traitlets\n",
-    "import ipywidgets\n",
-    "\n",
-    "image_w = ipywidgets.Image()\n",
-    "\n",
-    "traitlets.dlink((camera, 'value'), (image_w, 'value'), transform=bgr8_to_jpeg)\n",
-    "\n",
-    "display(image_w)"
+    "with torch.no_grad():\n",
+    "    output = model(input)"
    ]
   },
   {
@@ -115,26 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import torchvision\n",
-    "\n",
-    "device = torch.device('cuda')\n",
-    "mean = 255.0 * np.array([0.485, 0.456, 0.406])\n",
-    "stdev = 255.0 * np.array([0.229, 0.224, 0.225])\n",
-    "\n",
-    "normalize = torchvision.transforms.Normalize(mean, stdev)\n",
-    "\n",
-    "def preprocess(camera_value):\n",
-    "    global device, normalize\n",
-    "    x = camera_value\n",
-    "    x = cv2.cvtColor(x, cv2.COLOR_BGR2RGB)\n",
-    "    x = x.transpose((2, 0, 1))\n",
-    "    x = torch.from_numpy(x).float()\n",
-    "    x = normalize(x)\n",
-    "    x = x.to(device)\n",
-    "    x = x[None, ...]\n",
-    "    return x"
+    "# Plot histogram of the prediction to find a suitable threshold. From the histogram a 0.1 looks like a good choice.\n",
+    "plt.hist(output['out'].data.cpu().numpy().flatten())"
    ]
   },
   {
@@ -143,9 +118,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seg_image = ipywidgets.Image()\n",
-    "\n",
-    "display(seg_image)"
+    "# Plot the input image, ground truth and the predicted output\n",
+    "plt.figure(figsize=(10,10));\n",
+    "plt.subplot(131);\n",
+    "plt.imshow(img[0,...].transpose(1,2,0));\n",
+    "plt.title('Image')\n",
+    "plt.axis('off');\n",
+    "plt.subplot(132);\n",
+    "plt.imshow(mask);\n",
+    "plt.title('Ground Truth')\n",
+    "plt.axis('off');\n",
+    "plt.subplot(133);\n",
+    "plt.imshow(output['out'].cpu().detach().numpy()[0][0]>0.4);\n",
+    "plt.title('Segmentation Output')\n",
+    "plt.axis('off');"
    ]
   },
   {
@@ -154,15 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def execute(change):\n",
-    "    image = change['new']\n",
-    "    output = model_trt(preprocess(camera.value).half())[0].detach().cpu().float().numpy()\n",
-    "    mask = 1.0 * (output.argmax(0) == 15)\n",
-    "    seg_image.value = bgr8_to_jpeg(mask[:, :, None] * image)\n",
-    "    \n",
-    "    \n",
-    "mask = execute({'new': camera.value})\n",
-    "# camera.observe(execute, names='value')"
+    "output_trt = model_trt(input)"
    ]
   },
   {
@@ -171,7 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera.observe(execute, names='value')"
+    "# Plot histogram of the prediction to find a suitable threshold. From the histogram a 0.1 looks like a good choice.\n",
+    "plt.hist(output_trt['out'].data.cpu().numpy().flatten())"
    ]
   },
   {
@@ -180,25 +159,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera.unobserve(execute, names='value')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "\n",
-    "torch.cuda.current_stream().synchronize()\n",
-    "t0 = time.time()\n",
-    "for i in range(100):\n",
-    "    output = model_w(preprocess(camera.value).half())\n",
-    "torch.cuda.current_stream().synchronize()\n",
-    "t1 = time.time()\n",
-    "\n",
-    "print(100.0 / (t1 - t0))"
+    "# Plot the input image, ground truth and the predicted output\n",
+    "plt.figure(figsize=(10,10));\n",
+    "plt.subplot(131);\n",
+    "plt.imshow(img[0,...].transpose(1,2,0));\n",
+    "plt.title('Image')\n",
+    "plt.axis('off');\n",
+    "plt.subplot(132);\n",
+    "plt.imshow(mask);\n",
+    "plt.title('Ground Truth')\n",
+    "plt.axis('off');\n",
+    "plt.subplot(133);\n",
+    "plt.imshow(output_trt['out'].cpu().detach().numpy()[0][0]>0.4);\n",
+    "plt.title('Segmentation Output')\n",
+    "plt.axis('off');"
    ]
   }
  ],
@@ -218,9 +192,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
